# py_web_module_9_hw

./: .gitignore  LICENSE  README.md  authors_link_list.txt  bs4_main.py  config.ini  hw1.py  models.py  pyproject.toml  search_script.py  seed.py
